Added support for false memory sharing elimination.